<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (c) 2019, 2020 Obeo.
 This program and the accompanying materials
 are made available under the terms of the Eclipse Public License v2.0
 which accompanies this distribution, and is available at
 https://www.eclipse.org/legal/epl-2.0/

 SPDX-License-Identifier: EPL-2.0

 Contributors:
     Obeo - initial API and implementation
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.eclipse.sirius.web</groupId>
	<artifactId>sirius-web-spring-collaborative</artifactId>
	<version>0.2.11</version>
	<name>sirius-web-spring-collaborative</name>
	<description>Sirius Web Spring Collaborative</description>

	<properties>
		<java.version>11</java.version>
	</properties>
	
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/eclipse-sirius/sirius-components</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius.web</groupId>
			<artifactId>sirius-web-services-api</artifactId>
			<version>0.2.11</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius.web</groupId>
			<artifactId>sirius-web-collaborative-api</artifactId>
			<version>0.2.11</version>
		</dependency>
		<dependency>
    		<groupId>org.eclipse.sirius.web</groupId>
    		<artifactId>sirius-web-tests</artifactId>
    		<version>0.2.11</version>
    		<scope>test</scope>
    	</dependency>
    	<dependency>
    		<groupId>org.eclipse.sirius.web</groupId>
    		<artifactId>sirius-web-spring-tests</artifactId>
    		<version>0.2.11</version>
    		<scope>test</scope>
    	</dependency>
    	<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<configLocation>../sirius-web-resources/checkstyle/CheckstyleConfiguration.xml</configLocation>
					<encoding>UTF-8</encoding>
					<failsOnError>true</failsOnError>
					<consoleOutput>true</consoleOutput>
				</configuration>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.6</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
